--- a/presentation/pubspec.yaml
+++ b/presentation/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   domain:
     path: ../domain
+  data:
+    path: ../data
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
