--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
     sdk: flutter
   presentation:
     path: presentation
+  domain:
+    path: domain
+  data:
+    path: data
 
 
   # The following adds the Cupertino Icons font to your application.
